mlflow/overlays/istio/mlflow-ui-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mlflow-ui
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /mlflow/
    rewrite:
      uri: /mlflow/
    route:
    - destination:
        host: mlflow-ui.$(namespace).svc.$(clusterDomain)
        port:
          number: 80
